# CMakeHello

./: CMakeLists.txt  README.md  build.sh
include/: hello.h
source/: hello.c  main.c
src/: hello.c  main.c
